--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.6.5",
     "angular-material": "^1.1.4",
     "angular-ui-router": "^1.0.3",
+    "moment": "^2.18.1",
     "underscore": "^1.8.3",
     "webpack": "^3.4.1"
   },
