--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.6.5",
-    "angular-material": "^1.1.4",
     "angular-ui-router": "^1.0.3",
     "moment": "^2.18.1",
-    "underscore": "^1.8.3",
-    "webpack": "^3.4.1"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -29,6 +27,7 @@
     "pug": "^2.0.0-rc.2",
     "pug-html-loader": "^1.1.5",
     "style-loader": "^0.18.2",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "webpack": "^3.4.1"
   }
 }
