--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "angular": "^1.6.5",
     "angular-ui-router": "^1.0.3",
-    "moment": "^2.18.1",
-    "underscore": "^1.8.3"
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
